# vectorvein-sdk

./: .gitignore  README.md  README_ZH.md  pyproject.toml
.github/workflows/: release.yml
skill/vectorvein-cli/: SKILL.md
src/vectorvein/: __main__.py
src/vectorvein/api/: __init__.py  access_key.py  agent_workspace.py  base.py  client.py  exceptions.py  file_upload.py  models.py  task_agent.py  user.py  workflow.py
src/vectorvein/cli/: __init__.py  _output.py  _parser_builder.py  _parsers.py  main.py
src/vectorvein/cli/_builders/: __init__.py  api.py  auth.py  common.py  file.py  task_agent.py  workflow.py  workspace.py
src/vectorvein/cli/_commands/: api.py  auth.py  file.py  task_agent.py  workflow.py  workspace.py
src/vectorvein/workflow/graph/: edge.py  node.py  port.py  workflow.py
src/vectorvein/workflow/nodes/: __init__.py  audio_generation.py  cloud_storage.py  control_flows.py  file_processing.py  image_generation.py  llms.py  media_editing.py  media_processing.py  output.py  relational_db.py  text_processing.py  tools.py  triggers.py  vector_db.py  video_generation.py  web_crawlers.py
src/vectorvein/workflow/utils/: analyse.py  check.py  json_to_code.py  layout.py
tests/: conftest.py  dev_settings.example.py  sample_settings.py  workflow.json
tests/live/: live_common.py  test_create_workflow_simple.py  test_create_workflow_with_proper_nodes.py  test_vectorvein_api.py  test_vectorvein_api_simple.py
tests/unit/: test_api_phase0_phase1.py  test_cli.py  test_cli_help_navigation.py  test_cli_task_agent_agent_commands.py  test_cli_task_agent_ecosystem.py  test_cli_task_agent_task_help.py  test_task_agent_eval_mapping.py  test_task_agent_phase5_mapping.py  test_task_agent_phase6_phase7_mapping.py  test_task_agent_schema_alignment.py  test_workflow_design.py  test_workflow_from_json.py  test_workflow_json_to_code.py  test_workflow_phase2_phase3_mapping.py  test_workflow_phase4_mapping.py  test_workflow_record_analyse.py
