[project]
authors = [{name = "Anderson", email = "andersonby@163.com"}]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pycryptodome>=3.21.0",
]
description = "VectorVein API SDK and workflow designer"
license = {text = "MIT"}
name = "vectorvein-sdk"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.74"

[project.scripts]
vectorvein = "vectorvein.cli.main:main"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["tests"]

[tool.pdm.scripts]
check-all = {composite = ["lint", "format-check", "type-check"]}
format = "ruff format src/"
format-check = "ruff format --check src/"
lint = "ruff check src/"
test.cmd = "python"
test.env_file = ".env"
type-check = "ty check src/"

[tool.ruff]
line-length = 180
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]

ignore = ["E501", "I001"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
benchmarks-root = "tests\\benchmarks"
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
ignore-paths = []
module-root = "src"
test-framework = "pytest"
tests-root = "tests"

[dependency-groups]
dev = [
  "types-redis>=4.6.0.20241004",
  "pytest>=8.3.4",
  "ruff>=0.8.0",
  "ty>=0.0.1a7",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.analysis]
# Third-party deps without type stubs bundled; resolved at runtime via pip install.
allowed-unresolved-imports = ["httpx", "Crypto.**", "pydantic"]

[[tool.ty.overrides]]
# Mixin classes call self._request() which is provided by the base client at composition time.
include = [
  "src/vectorvein/api/access_key.py",
  "src/vectorvein/api/workflow.py",
  "src/vectorvein/api/file_upload.py",
  "src/vectorvein/api/task_agent.py",
  "src/vectorvein/api/agent_workspace.py",
  "src/vectorvein/api/user.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
